@@ -113,6 +113,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13960: HTMLParser is now able to handle broken comments when
+  strict=False.
+
 - Issue #9021: Add an introduction to the copy module documentation.
 
 - Issue #6005: Examples in the socket library documentation use sendall, where
@@ -123,7 +126,7 @@ Library
 
 - Issue #10881: Fix test_site failure with OS X framework builds.
 
-- Issue #964437 Make IDLE help window non-modal.
+- Issue #964437: Make IDLE help window non-modal.
   Patch by Guilherme Polo and Roger Serwy.
 
 - Issue #2945: Make the distutils upload command aware of bdist_rpm products.
